--- a/gui/src/Dialogs/WordlistDialog.ui
+++ b/gui/src/Dialogs/WordlistDialog.ui
@@ -236,7 +236,7 @@
        <item>
         <widget class="QFrame" name="frameSpecialWordlist">
          <property name="frameShape">
-          <enum>QFrame::StyledPanel</enum>
+          <enum>QFrame::NoFrame</enum>
          </property>
          <property name="frameShadow">
           <enum>QFrame::Raised</enum>
