--- a/gui/src/engines/Brute.ui
+++ b/gui/src/engines/Brute.ui
@@ -215,6 +215,12 @@
       </item>
       <item>
        <widget class="QToolButton" name="buttonConfig">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>19</height>
+         </size>
+        </property>
         <property name="styleSheet">
          <string notr="true"/>
         </property>
