--- a/gui/src/tools/RawOsint.ui
+++ b/gui/src/tools/RawOsint.ui
@@ -285,7 +285,7 @@
             </size>
            </property>
            <property name="frameShape">
-            <enum>QFrame::StyledPanel</enum>
+            <enum>QFrame::NoFrame</enum>
            </property>
            <property name="frameShadow">
             <enum>QFrame::Raised</enum>
@@ -469,6 +469,12 @@
        </property>
        <item>
         <widget class="QTreeView" name="treeView">
+         <property name="font">
+          <font>
+           <family>MS Shell Dlg 2</family>
+           <pointsize>8</pointsize>
+          </font>
+         </property>
          <property name="editTriggers">
           <set>QAbstractItemView::NoEditTriggers</set>
          </property>
