--- a/gui/src/engines/DnsRecords.ui
+++ b/gui/src/engines/DnsRecords.ui
@@ -346,6 +346,12 @@
       </item>
       <item>
        <widget class="QToolButton" name="buttonConfig">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>19</height>
+         </size>
+        </property>
         <property name="styleSheet">
          <string notr="true"/>
         </property>
@@ -492,6 +498,12 @@
            </item>
            <item>
             <widget class="QTreeView" name="treeViewResults">
+             <property name="font">
+              <font>
+               <family>MS Shell Dlg 2</family>
+               <pointsize>8</pointsize>
+              </font>
+             </property>
              <property name="focusPolicy">
               <enum>Qt::NoFocus</enum>
              </property>
