--- a/gui/res/themes/stylesheet.qss
+++ b/gui/res/themes/stylesheet.qss
@@ -148,12 +148,12 @@ QFrame[frameShape="5"] {
     background: transparent;
 }
 
-QFrame#frame, QFrame#frame_newSpecialWordlist, QFrame#frame_nameservers{
+QFrame#frame, QFrame#frame1, QFrame#frame_newSpecialWordlist, QFrame#frame_nameservers{
     background-color: rgb(55, 55, 55);
 }
 
 /******** QLabels ***********/
-QLabel#labelResultsCount, QLabel#label_level, QLabel#labelCount, QLabel#labelResultsCountSRV {
+QLabel#labelResultsCount, QLabel#label_level, QLabel#labelResultsCountTree, QLabel#labelResultsCountJson, QLabel#labelCount, QLabel#labelResultsCountSRV {
     background-color: rgb(42, 42, 42);
 }
 
@@ -193,6 +193,14 @@ QSplitter::handle:horizontal {
 QSplitter::handle:vertical{
     background-color:rgb(40,40,40);
     height: 5px
+}
+
+QTextEdit{
+    background-color:transparent;
+    color: rgba(218, 218, 163, 200);
+    border-style: solid;
+    border-color: rgb(25,25,25);
+    border-width: 1px;
 }
 
 QListWidget, QTableView, QTreeView, QListView, QColumnView, QPlainTextEdit{
