--- a/gui/src/engines/Raw.ui
+++ b/gui/src/engines/Raw.ui
@@ -359,6 +359,9 @@
              <property name="editTriggers">
               <set>QAbstractItemView::NoEditTriggers</set>
              </property>
+             <property name="alternatingRowColors">
+              <bool>true</bool>
+             </property>
              <property name="selectionBehavior">
               <enum>QAbstractItemView::SelectItems</enum>
              </property>
@@ -366,7 +369,7 @@
               <bool>false</bool>
              </attribute>
              <attribute name="headerCascadingSectionResizes">
-              <bool>false</bool>
+              <bool>true</bool>
              </attribute>
              <attribute name="headerMinimumSectionSize">
               <number>100</number>
