--- a/gui/src/tools/IpChecker.ui
+++ b/gui/src/tools/IpChecker.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>603</width>
-    <height>454</height>
+    <width>639</width>
+    <height>510</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -130,30 +130,93 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QLabel" name="label_2">
-       <property name="font">
-        <font>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>IpInfo:</string>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <widget class="QCheckBox" name="checkBoxExpand">
+         <property name="text">
+          <string>Expand</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QToolButton" name="toolButton">
+         <property name="minimumSize">
+          <size>
+           <width>65</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Action &gt;</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
-      <widget class="QTableView" name="tableResults">
-       <attribute name="horizontalHeaderDefaultSectionSize">
+      <widget class="QTreeView" name="treeResults">
+       <property name="acceptDrops">
+        <bool>false</bool>
+       </property>
+       <property name="alternatingRowColors">
+        <bool>true</bool>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::SingleSelection</enum>
+       </property>
+       <attribute name="headerCascadingSectionResizes">
+        <bool>true</bool>
+       </attribute>
+       <attribute name="headerMinimumSectionSize">
+        <number>200</number>
+       </attribute>
+       <attribute name="headerDefaultSectionSize">
         <number>300</number>
        </attribute>
-       <attribute name="verticalHeaderVisible">
-        <bool>false</bool>
+       <attribute name="headerHighlightSections">
+        <bool>true</bool>
        </attribute>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEditFilter"/>
+      <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <item>
+        <widget class="QComboBox" name="comboBox_3">
+         <property name="minimumSize">
+          <size>
+           <width>100</width>
+           <height>0</height>
+          </size>
+         </property>
+         <item>
+          <property name="text">
+           <string>Property</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Value</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEditFilter"/>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
