--- a/gui/src/engines/Osint.ui
+++ b/gui/src/engines/Osint.ui
@@ -1250,7 +1250,7 @@
                   <x>0</x>
                   <y>0</y>
                   <width>174</width>
-                  <height>700</height>
+                  <height>723</height>
                  </rect>
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -1292,6 +1292,13 @@
                   <widget class="QCheckBox" name="moduleDnslytics">
                    <property name="text">
                     <string>DNSlytics</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="moduleDomainTools">
+                   <property name="text">
+                    <string>DomainTools</string>
                    </property>
                   </widget>
                  </item>
